<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_web"
        android:layout_marginTop="3dp"
        android:onClick="onClickAbrirPaginaWeb"
        android:id="@+id/btn_web" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_llamada"
        android:layout_marginTop="3dp"
        android:onClick="onClickLlamadaTelefono"
        android:id="@+id/btn_llamada" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_maps"
        android:layout_marginTop="3dp"
        android:onClick="onClickGoogleMaps"
        android:id="@+id/btn_map" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_street"
        android:layout_marginTop="3dp"
        android:onClick="onClickViewStreet"
        android:id="@+id/btn_street" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_foto"
        android:layout_marginTop="3dp"
        android:onClick="onClickTomarFoto"
        android:id="@+id/btn_foto" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_correo"
        android:layout_marginTop="3dp"
        android:id="@+id/btn_correo"
        android:onClick="onClickMandarCorreo" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mejorado"
        android:layout_marginTop="3dp"
        android:id="@+id/btn_mejorado"
        android:onClick="onClickMandarCorreoMejorado" />
</LinearLayout>
